--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ggggino/wordbundle",
+    "name": "tiitoo/wordbundle",
     "description": "This is a Symfony2 Bundle helps you to read and write Word files, thanks to the PHPWord library",
     "type": "symfony-bundle",
     "authors": [
@@ -13,7 +13,7 @@
     "license": "MIT",
     "require": {
         "php": ">=5.6",
-        "symfony/framework-bundle": "~2.6|~3.0",
+        "symfony/framework-bundle": "~2.3|~3.0",
         "phpoffice/phpword": "^0.14|dev-develop"
     },
     "require-dev": {
