--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "license": "MIT",
     "require": {
         "php": ">=5.6",
-        "symfony/framework-bundle": "~2.3|~3.0",
+        "symfony/framework-bundle": "~2.3",
         "phpoffice/phpword": "^0.14|dev-develop"
     },
     "require-dev": {
